// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header to match snapshot 1`] = `
<body>
  <div>
    <nav
      class="header-nav navbar navbar-expand-md navbar-light bg-light sticky-top"
    >
      <div
        class="container-fluid"
      >
        <div
          class="header-nav-row align-items-center row"
        >
          <div
            class="col-2"
          >
            <span
              class="navbar-brand"
            >
              <a
                href="/home"
              >
                <img
                  class=""
                  height="31"
                  src="/assets/icons/svg/core.svg"
                />
              </a>
            </span>
          </div>
          <div
            class="col-6"
          >
            <div
              class="navbar-nav"
            >
              <a
                href="/home"
              >
                <span
                  class="nav-link"
                >
                  Home
                </span>
              </a>
              <a
                href="/dashboard"
              >
                <span
                  class="nav-link"
                >
                  Dashboard
                </span>
              </a>
            </div>
          </div>
          <div
            class="d-flex justify-content-end col-4"
          >
            <span
              class="icon-container"
            >
              <span
                class="icon"
              >
                <svg>
                  user-icon.svg
                </svg>
              </span>
            </span>
            <span
              class="icon-container"
            >
              <span
                class="icon"
              >
                <svg>
                  vertical-triple-dots.svg
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </nav>
  </div>
</body>
`;

exports[`Header to match snapshot selected 1`] = `
<body>
  <div>
    <nav
      class="header-nav navbar navbar-expand-md navbar-light bg-light sticky-top"
    >
      <div
        class="container-fluid"
      >
        <div
          class="header-nav-row align-items-center row"
        >
          <div
            class="col-2"
          >
            <span
              class="navbar-brand"
            >
              <a
                href="/home"
              >
                <img
                  class=""
                  height="31"
                  src="/assets/icons/svg/core.svg"
                />
              </a>
            </span>
          </div>
          <div
            class="col-6"
          >
            <div
              class="navbar-nav"
            >
              <a
                href="/home"
              >
                <span
                  class="selected nav-link"
                >
                  Home
                </span>
              </a>
              <a
                href="/dashboard"
              >
                <span
                  class="nav-link"
                >
                  Dashboard
                </span>
              </a>
            </div>
          </div>
          <div
            class="d-flex justify-content-end col-4"
          >
            <span
              class="icon-container"
            >
              <span
                class="icon"
              >
                <svg>
                  user-icon.svg
                </svg>
              </span>
            </span>
            <span
              class="icon-container"
            >
              <span
                class="icon"
              >
                <svg>
                  vertical-triple-dots.svg
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </nav>
  </div>
</body>
`;

exports[`Header to match snapshot soft select 1`] = `
<body>
  <div>
    <nav
      class="header-nav navbar navbar-expand-md navbar-light bg-light sticky-top"
    >
      <div
        class="container-fluid"
      >
        <div
          class="header-nav-row align-items-center row"
        >
          <div
            class="col-2"
          >
            <span
              class="navbar-brand"
            >
              <a
                href="/home"
              >
                <img
                  class=""
                  height="31"
                  src="/assets/icons/svg/core.svg"
                />
              </a>
            </span>
          </div>
          <div
            class="col-6"
          >
            <div
              class="navbar-nav"
            >
              <a
                href="/home"
              >
                <span
                  class="soft-selected nav-link"
                >
                  Home
                </span>
              </a>
              <a
                href="/dashboard"
              >
                <span
                  class="nav-link"
                >
                  Dashboard
                </span>
              </a>
            </div>
          </div>
          <div
            class="d-flex justify-content-end col-4"
          >
            <span
              class="icon-container"
            >
              <span
                class="icon"
              >
                <svg>
                  user-icon.svg
                </svg>
              </span>
            </span>
            <span
              class="icon-container"
            >
              <span
                class="icon"
              >
                <svg>
                  vertical-triple-dots.svg
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </nav>
  </div>
</body>
`;
